# Voip

./: .gitignore  CMakeLists.txt  auxwindows.cpp  testmessage.py
client/: CMakeLists.txt
client/includes/: application.h  message.h  windows.h
client/src/: CMakeLists.txt  application.cpp  main.cpp  message.cpp  windows.cpp
common/includes/: datagram.h  identity.h  socketmembersnames.h
includes/: application.h  auxwindows.h  datagram.h  identity.h  mainwindow.h  message.h  serverapp.h  windows.h
server/: CMakeLists.txt
server/includes/: serverapp.h
server/src/: CMakeLists.txt  main.cpp  serverapp.cpp
src/: CMakeLists.txt  application.cpp  auxwindows.cpp  identity.cpp  main.cpp  mainclient.cpp  mainserver.cpp  mainwindow.cpp  message.cpp  serverapp.cpp  windows.cpp
